test/classes/dinan/generic_constructor.good
generic_constructor.chpl:5: error: constructor for class 'Foo' requires a generic argument called 'x'
